# XAllergen2.0

./: .gitignore  01_curate_allergenicity_data.ipynb  02_data_exploration_deepalgpro.ipynb  03_baseline_model.ipynb  03_baseline_model_colab.ipynb  03_finetune_model_colab.ipynb  04_probing_metrics.ipynb  04_probing_metrics_deep_plant_allergy.ipynb  04_probing_metrics_finetuned.ipynb  05_finetune_model_colab.ipynb  05_finetuned_esm_model.ipynb  05_mtl_epitope_supervision.ipynb  06_mtl_top1_unfrozen_epitope_supervision.ipynb  07_compare_all_model_probes.ipynb  07_generate_probe_rows.ipynb  08_compare_all_model_probes.ipynb  09_insilico_mutagenesis.ipynb  B_cell_epitope_ds_cleaning.ipynb  Makefile  README.md  SETUP.md  baseline_notebook_utils.py  deep_plant_allergy_utils.py  mtl_epitope_notebook_utils.py  pyproject.toml  replot_probe_figures.py  requirements.txt
data/: deepalgpro_test_cleaned.csv  deepalgpro_train_cleaned.csv  hits.tsv  iedb_sequence_fetch_cache.csv  negative_sequence_fetch_cache.csv  negatives_clusters_cluster.tsv  negatives_splitA.csv  negatives_splitB.csv  positive_epitopes_full.csv  positives.csv  positives_all_epitope_metadata.csv  positives_clusters_cluster.tsv  positives_splitA.csv  positives_splitB.csv  proteins_epitope_coverage_gt_0_6.csv  t_cell_b_cell_MHC_II_epitopes.csv
notebooks/: 01_curate_allergenicity_data.ipynb  02_data_exploration_deepalgpro.ipynb  03_baseline_model_colab.ipynb  03_baseline_model_esm2.ipynb  03_baseline_top1_unfrozen_esm2.ipynb  03_deep_plant_allergy_benchmark.ipynb  03_finetune_model_colab.ipynb  04_probing_metrics.ipynb  (+29 more)
(+103 files in other folders)
