[project]
name = "xallergen2"
version = "0.1.0"
description = "Notebook environment for the active XAllergen2.0 workflows."
requires-python = "==3.13.5"
dependencies = [
    "biopython==1.86",
    "captum==0.8.0",
    "huggingface-hub==0.36.2",
    "ipykernel==7.2.0",
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "pandas==3.0.1",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "statsmodels>=0.14,<0.15",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==4.48.1",
]

[tool.uv]
package = false
